--- a/basic/src/main/resources/templates/login.html
+++ b/basic/src/main/resources/templates/login.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Login</title>
+<title>Insert title here</title>
 </head>
 <body>
-	<form method="post" action="/login">
-		ID : <input type="text" name="id"><br>
-		PW : <input type="text" name="pw"><br>
-		<input type="submit">
+	<form action="/login" method="post">
+		ID : <input type="text" name="userId"><br>
+		PW : <input  type="password" name="userPw"><br> <input type="submit" value="로그인">
 	</form>
 </body>
 </html>
